codedocs-core/tests/snapshots/doc_ir__negrita_y_cursiva_al_mismo_tiempo.snap
---
source: codedocs-core/tests/doc_ir.rs
expression: "parse_document(\"**negrita y *cursiva***\\n\")"
---
[
    Paragraph {
        spans: [
            Span {
                text: "negrita y ",
                marks: Bold,
            },
            Span {
                text: "cursiva",
                marks: Bold,
            },
        ],
    },
]
