codedocs-core/tests/snapshots/doc_ir__regla.snap
---
source: codedocs-core/tests/doc_ir.rs
expression: "parse_document(\"--- \\n\")"
---
[
    Rule,
]
